<resources>
    <string name="app_name">pet</string>
    <string name="login_iv">登录界面图片</string>
    <string name="username">用户名</string>
    <string name="input_username">请输入用户名</string>
    <string name="password">密码</string>
    <string name="input_password">请输入密码</string>
    <string name="no_account">还没有账号？</string>
    <string name="register">注册</string>
    <string name="phone">手机号</string>
    <string name="input_phone">请输入手机号</string>
    <string name="email">邮箱</string>
    <string name="input_email">请输入邮箱</string>
    <string name="confire_password">确认密码</string>
    <string name="input_confirm">请输入确认密码</string>
    <string name="login">登录</string>
    <string name="title_activity_login1">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page">首页</string>
    <string name="searchByAddress">根据地址搜索</string>
    <string name="input">请输入</string>
    <string name="apply_family">申请家庭</string>
    <string name="pet_guide">宠物指南</string>
    <string name="service_term">服务条款</string>
    <string name="roster_name">寄养师姓名</string>
    <string name="roster_describe">寄养师描述</string>
    <string name="search_goods">搜索商品</string>
    <string name="nickname">昵称</string>
</resources>
